# desafio-pixeon

./: .clang-format  .gitignore  CMakeLists.txt  PXMainWindow.cpp  PXMainWindow.h  PXRenderThread.cpp  PXRenderThread.h  README.md  main.cpp
src/: CMakeLists.txt  PXMainWindow.cpp  PXMainWindow.h  PXRenderThread.cpp  PXRenderThread.h  main.cpp
